:iphone: working on iphone fix

--- a/themes/barba/layout/components/common/_bigtitle.scss
+++ b/themes/barba/layout/components/common/_bigtitle.scss
@@ -6,7 +6,7 @@
   right: 0;
   bottom: 0;
   left: 0;
-  // overflow: hidden;
+  overflow: hidden;
   min-height: 100vh;
   opacity: 0.07;
   pointer-events: none;
