--- a/themes/barba/layout/components/features/_feature.scss
+++ b/themes/barba/layout/components/features/_feature.scss
@@ -27,6 +27,7 @@
 
   right: 0;
   left: 0;
+  height: 100vh;
   opacity: 0.8;
 
   svg {
