--- a/themes/barba/layout/components/homepage/_homepage.scss
+++ b/themes/barba/layout/components/homepage/_homepage.scss
@@ -64,7 +64,7 @@
   }
 
   .line {
-    // overflow: hidden;
+    overflow: hidden;
   }
 
   span {
